--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+notebooks/local_ignored/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -37,7 +39,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test / coverage performance
 htmlcov/
 .tox/
 .nox/
@@ -127,3 +129,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.idea/
