--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -7,7 +7,7 @@ on:
       - models/bing/keywords/**
       - .github/workflows/bing_update_bids_keyword.yml
   schedule:
-  - cron: "0 0 * * *"
+  - cron: "0 12 * * *" # 8 am EST
   workflow_dispatch:
 
 jobs:
@@ -41,23 +41,27 @@ jobs:
       - name: Compute updated bids
         id: compute
         run: |
-          python ${GITHUB_WORKSPACE}/models/bing/keywords/compute_keyword_bid_updates.py || exit_code=$?
+          exit 0
+          python ${GITHUB_WORKSPACE}/models/bing/keywords/compute_keyword_bid_updates.py \
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $exit_code
+          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
 
       - name: Check updated bids
         id: check
         run: |
-          python ${GITHUB_WORKSPACE}/models/bing/keywords/check_keyword_bid_updates.py || exit_code=$?
+          python ${GITHUB_WORKSPACE}/models/bing/keywords/check_keyword_bid_updates.py \
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $exit_code
+          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
           
       - name: Apply updated bids
         id: apply
         run: |
-          python ${GITHUB_WORKSPACE}/models/bing/keywords/apply_keyword_bid_updates.py || exit_code=$?
+          python ${GITHUB_WORKSPACE}/models/bing/keywords/apply_keyword_bid_updates.py \
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $exit_code
+          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
       
       - name: Compute failure notification
         uses: rtCamp/action-slack-notify@v2
@@ -65,7 +69,7 @@ jobs:
         env:
           SLACK_CHANNEL: alert-test
           SLACK_MESSAGE: <!channel>
-          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.compute.outputs.exit_code] }}
+          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -76,7 +80,7 @@ jobs:
         env:
           SLACK_CHANNEL: alert-test
           SLACK_MESSAGE: <!channel>
-          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.check.outputs.exit_code] }}
+          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -87,7 +91,7 @@ jobs:
         env:
           SLACK_CHANNEL: alert-test
           SLACK_MESSAGE: <!channel>
-          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.apply.outputs.exit_code] }}
+          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
