--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -13,6 +13,12 @@ on:
 jobs:
   update-keyword-bids:
     runs-on: ubuntu-latest
+    env:
+      SLACK_CHANNEL: alert-test
+      CHANNEL_SID: !channel
+      AMAL_SID: @U01PPS0BLKY
+      CURTIS_SID: @U01MYTF7X18
+      DAN_SID: @U01R2UV56Q1 
 
     steps:
       - uses: actions/checkout@v2
@@ -68,7 +74,7 @@ jobs:
         if: always() && steps.compute.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <!channel>
+          SLACK_MESSAGE: <$AMAL_SID>
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -79,7 +85,7 @@ jobs:
         if: always() && steps.check.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <!channel>
+          SLACK_MESSAGE: <$AMAL_SID $CURTIS_SID>
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -90,7 +96,7 @@ jobs:
         if: always() && steps.apply.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <!channel>
+          SLACK_MESSAGE: <$AMAL_SID $CURTIS_SID $DAN_SID>
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -100,7 +106,8 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: alert-test
+          SLACK_MESSAGE: Bing keyword bids updated successfully!
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
-          SLACK_MESSAGE: Bing keyword bids updated successfully!
+          
