--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -74,7 +74,7 @@ jobs:
         if: always() && steps.compute.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <$AMAL_SID>
+          SLACK_MESSAGE: <${{$AMAL_SID}}>
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -85,7 +85,7 @@ jobs:
         if: always() && steps.check.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <$AMAL_SID $CURTIS_SID>
+          SLACK_MESSAGE: <${{$AMAL_SID}}> <${{$CURTIS_SID}}>
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -96,7 +96,7 @@ jobs:
         if: always() && steps.apply.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <$AMAL_SID $CURTIS_SID $DAN_SID>
+          SLACK_MESSAGE: <${{$AMAL_SID}}> <${{$CURTIS_SID}}> <${{$DAN_SID}}>
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
