--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -2,7 +2,7 @@ name: bing-update-bids-keyword
 
 on:
   push:
-    branches: [ workspace_amal ]
+    # branches: [ workspace_amal ]
     paths:
       - models/bing/keywords/**
       - .github/workflows/bing_update_bids_keyword.yml
