--- a/.github/workflows/bing_update_bids_tod.yml
+++ b/.github/workflows/bing_update_bids_tod.yml
@@ -1,18 +1,24 @@
-name: bing-update-bids-tod
+name: bing-update-bids-keyword
 
 on:
   push:
-    branches: [ workspace_amal ]
+    # branches: [ workspace_amal ]
     paths:
       - models/bing/time_of_day/**
       - .github/workflows/bing_update_bids_tod.yml
   schedule:
-  - cron: "0 12 * * *"
+  - cron: "0 12 * * *" # 8 am EST
   workflow_dispatch:
 
 jobs:
   update-keyword-bids:
     runs-on: ubuntu-latest
+    env:
+      SLACK_CHANNEL: alert-test
+      CHANNEL_SID: '!channel'
+      AMAL_SID: '@U01PPS0BLKY'
+      CURTIS_SID: '@U01MYTF7X18'
+      DAN_SID: '@U01R2UV56Q1'
 
     steps:
       - uses: actions/checkout@v2
@@ -27,44 +33,48 @@ jobs:
       - name: Activate conda env from .yml
         uses: conda-incubator/setup-miniconda@v2
         with:
-          environment-file: conda-data-science-bing.yml
+          environment-file: models/bing/time_of_day/conda.yml
 
       - name: Install pip packages
         run: |
           echo "${GIT_SSH_KEY}\n" > GIT_SSH_PTH
           chmod 600 GIT_SSH_PTH
-          GIT_SSH_COMMAND="ssh -i GIT_SSH_PTH" pip install -r ${GITHUB_WORKSPACE}/requirements.txt
+          GIT_SSH_COMMAND="ssh -i GIT_SSH_PTH" \
+            pip install -r ${GITHUB_WORKSPACE}/models/bing/time_of_day/requirements.txt
         env:
           GIT_SSH_KEY: ${{ secrets.GIT_SSH_KEY }}
 
       - name: Compute updated bids
         id: compute
         run: |
-          python ${GITHUB_WORKSPACE}/compute_keyword_bid_updates.py || exit_code=$?
+          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/compute_keyword_bid_updates.py \
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $exit_code
+          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
 
       - name: Check updated bids
         id: check
         run: |
-          python ${GITHUB_WORKSPACE}/check_keyword_bid_updates.py || exit_code=$?
+          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/check_keyword_bid_updates.py \
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $exit_code
+          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
           
       - name: Apply updated bids
         id: apply
         run: |
-          python ${GITHUB_WORKSPACE}/apply_keyword_bid_updates.py || exit_code=$?
+          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/apply_keyword_bid_updates.py \
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $exit_code
+          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
       
       - name: Compute failure notification
         uses: rtCamp/action-slack-notify@v2
         if: always() && steps.compute.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <!channel>
-          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.compute.outputs.exit_code] }}
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> Error computing bid updates.
+          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -74,8 +84,8 @@ jobs:
         if: always() && steps.check.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <!channel>
-          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.check.outputs.exit_code] }}
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> Bid updates failed validation step.
+          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -85,8 +95,8 @@ jobs:
         if: always() && steps.apply.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <!channel>
-          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.apply.outputs.exit_code] }}
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> <${{env.DAN_SID}}> Error applying bid updates to bing.
+          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -95,7 +105,8 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: alert-test
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> Bing keyword bids updated successfully!
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
-          SLACK_MESSAGE: Bing keyword bids updated successfully!
+          
