--- a/.github/workflows/bing_update_bids_tod.yml
+++ b/.github/workflows/bing_update_bids_tod.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Compute updated bids
         id: compute
         run: |
-          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/compute_keyword_bid_updates.py \
+          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/compute_tod_bid_mods.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
           exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
@@ -55,7 +55,7 @@ jobs:
       - name: Check updated bids
         id: check
         run: |
-          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/check_keyword_bid_updates.py \
+          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/check_tod_bid_mods.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
           exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
@@ -63,7 +63,7 @@ jobs:
       - name: Apply updated bids
         id: apply
         run: |
-          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/apply_keyword_bid_updates.py \
+          python ${GITHUB_WORKSPACE}/models/bing/time_of_day/apply_tod_bid_mods.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
           exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
@@ -73,7 +73,7 @@ jobs:
         if: always() && steps.compute.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> Error computing bid updates.
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> Error computing TOD modifiers.
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -84,7 +84,7 @@ jobs:
         if: always() && steps.check.outputs.exit_code > 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> Bid updates failed validation step.
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> TOD modifiers failed validation step.
           SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
@@ -105,7 +105,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> Bing keyword bids updated successfully!
+          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> TOD modifiers updated successfully!
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
