--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -48,55 +48,55 @@ jobs:
         id: compute
         run: |
           python ${GITHUB_WORKSPACE}/models/bing/keywords/compute_keyword_bid_updates.py \
-            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
+          exit $(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
 
       - name: Check updated bids
         id: check
         run: |
           python ${GITHUB_WORKSPACE}/models/bing/keywords/check_keyword_bid_updates.py \
-            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
+          exit $(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
           
       - name: Apply updated bids
         id: apply
         run: |
           python ${GITHUB_WORKSPACE}/models/bing/keywords/apply_keyword_bid_updates.py \
-            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
+            && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
           echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $(( $exit_code > 0 ? $exit_code-1 : 0)) # allow exit_code=1 as warning
+          exit $(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
       
       - name: Compute failure notification
         uses: rtCamp/action-slack-notify@v2
-        if: always() && steps.compute.outputs.exit_code > 0
+        if: always() && steps.compute.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> Error computing bid updates.
-          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
+          SLACK_MESSAGE: <${{ env.AMAL_SID }}> Error computing bid updates.
+          SLACK_COLOR: ${{ fromJSON('["warning","good","danger"]')[steps.compute.outputs.exit_code+1] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
 
       - name: Check failure notification
         uses: rtCamp/action-slack-notify@v2
-        if: always() && steps.check.outputs.exit_code > 0
+        if: always() && steps.check.outputs.exit_code != 0
         env:
-          SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> Bid updates failed validation step.
-          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
+          SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
+          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Bid updates failed validation step.
+          SLACK_COLOR: ${{ fromJSON('["warning","good","danger"]')[steps.check.outputs.exit_code+1] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
 
       - name: Apply failure notification
         uses: rtCamp/action-slack-notify@v2
-        if: always() && steps.apply.outputs.exit_code > 0
+        if: always() && steps.apply.outputs.exit_code != 0
         env:
-          SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> <${{env.DAN_SID}}> Error applying bid updates to bing.
-          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.apply.outputs.exit_code] }}
+          SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
+          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> <${{ env.DAN_SID }}> Error applying bid updates to bing.
+          SLACK_COLOR: ${{ fromJSON('["warning","good","danger"]')[steps.apply.outputs.exit_code+1] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -104,8 +104,8 @@ jobs:
       - name: Job success notification
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_CHANNEL: alert-test
-          SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> Bing keyword bids updated successfully!
+          SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
+          SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> Bing keyword bids updated successfully!
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
