--- a/.github/workflows/bing_update_bids_tod.yml
+++ b/.github/workflows/bing_update_bids_tod.yml
@@ -74,7 +74,7 @@ jobs:
         env:
           SLACK_CHANNEL: alert-test
           SLACK_MESSAGE: <${{env.AMAL_SID}}> Error computing TOD modifiers.
-          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.compute.outputs.exit_code] }}
+          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.compute.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -85,7 +85,7 @@ jobs:
         env:
           SLACK_CHANNEL: alert-test
           SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> TOD modifiers failed validation step.
-          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.check.outputs.exit_code] }}
+          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.check.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
@@ -96,7 +96,7 @@ jobs:
         env:
           SLACK_CHANNEL: alert-test
           SLACK_MESSAGE: <${{env.AMAL_SID}}> <${{env.CURTIS_SID}}> <${{env.DAN_SID}}> Error applying bid updates to bing.
-          SLACK_COLOR: ${{ fromJSON('["good","warning","danger"]')[steps.apply.outputs.exit_code] }}
+          SLACK_COLOR: ${{ fromJSON('["good","danger","warning"]')[steps.apply.outputs.exit_code] }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_ICON: https://cdn.healthcare.com/devops/logos/GitHub-Mark-64px.png
           SLACK_USERNAME: GithubActions
