--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -48,13 +48,12 @@ jobs:
         id: compute
         run: |
           cd $GITHUB_WORKSPACE
-          ls . 
-          pwd
           python models/bing/keywords/compute_keyword_bid_updates.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
-          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code ))
-          echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
+          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
+          relu_exit_code =$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
+          echo "::set-output name=exit_code::$pos_exit_code" # https://stackoverflow.com/questions/60453924
+          exit $relu_exit_code
 
       - name: Check updated bids
         id: check
@@ -62,8 +61,10 @@ jobs:
           cd $GITHUB_WORKSPACE
           python models/bing/keywords/check_keyword_bid_updates.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
-          echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
+          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
+          relu_exit_code =$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
+          echo "::set-output name=exit_code::$pos_exit_code" # https://stackoverflow.com/questions/60453924
+          exit $relu_exit_code
           
       - name: Apply updated bids
         id: apply
@@ -71,8 +72,10 @@ jobs:
           cd $GITHUB_WORKSPACE
           python models/bing/keywords/apply_keyword_bid_updates.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
-          echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
-          exit $(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
+          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
+          relu_exit_code =$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
+          echo "::set-output name=exit_code::$pos_exit_code" # https://stackoverflow.com/questions/60453924
+          exit $relu_exit_code
       
       - name: Compute failure notification
         uses: rtCamp/action-slack-notify@v2
