--- a/.github/workflows/bing_update_bids_keyword.yml
+++ b/.github/workflows/bing_update_bids_keyword.yml
@@ -48,7 +48,7 @@ jobs:
         id: compute
         run: |
           cd $GITHUB_WORKSPACE
-          python models/bing/keywords/compute_keyword_bid_updates.py \
+          python -m models/bing/keywords/compute_keyword_bid_updates.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
           pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
           relu_exit_code=$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
@@ -59,7 +59,7 @@ jobs:
         id: check
         run: |
           cd $GITHUB_WORKSPACE
-          python models/bing/keywords/check_keyword_bid_updates.py \
+          python -m models/bing/keywords/check_keyword_bid_updates.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
           pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
           relu_exit_code=$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
@@ -70,7 +70,7 @@ jobs:
         id: apply
         run: |
           cd $GITHUB_WORKSPACE
-          python models/bing/keywords/apply_keyword_bid_updates.py \
+          python -m models/bing/keywords/apply_keyword_bid_updates.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating job on fail
           pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
           relu_exit_code=$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
