--- a/.github/workflows/bing_update_bids_tod.yml
+++ b/.github/workflows/bing_update_bids_tod.yml
@@ -47,45 +47,33 @@ jobs:
       - name: Compute TOD modifiers
         id: compute
         run: |
-          echo $PYTHONPATH
           export PYTHONPATH=${GITHUB_WORKSPACE}:${PYTHONPATH}
-          echo $PYTHONPATH
           python ${GITHUB_WORKSPACE}/models/bing/time_of_day/compute_tod_bid_mods.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
-          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
-          relu_exit_code=$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
-          echo "::set-output name=exit_code::$pos_exit_code" # https://stackoverflow.com/questions/60453924
-          exit $relu_exit_code
+          echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
+          exit $(( $exit_code==1 ))
 
       - name: Check TOD modifiers
         id: check
         run: |
-          echo $PYTHONPATH
           export PYTHONPATH=${GITHUB_WORKSPACE}:${PYTHONPATH}
-          echo $PYTHONPATH
           python ${GITHUB_WORKSPACE}/models/bing/time_of_day/check_tod_bid_mods.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
-          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
-          relu_exit_code=$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
-          echo "::set-output name=exit_code::$pos_exit_code" # https://stackoverflow.com/questions/60453924
-          exit $relu_exit_code
+          echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
+          exit $(( $exit_code==1 ))
           
       - name: Apply TOD modifiers
         id: apply
         run: |
-          echo $PYTHONPATH
           export PYTHONPATH=${GITHUB_WORKSPACE}:${PYTHONPATH}
-          echo $PYTHONPATH
           python ${GITHUB_WORKSPACE}/models/bing/time_of_day/apply_tod_bid_mods.py \
             && exit_code=0 || exit_code=$? # capture exit code w/o gh terminating step on fail
-          pos_exit_code=$(( $exit_code > 0 ? $exit_code : -$exit_code )) 
-          relu_exit_code=$(( $exit_code > 0 ? $exit_code : 0)) # allow exit_code<0 as warning
-          echo "::set-output name=exit_code::$pos_exit_code" # https://stackoverflow.com/questions/60453924
-          exit $relu_exit_code
+          echo "::set-output name=exit_code::$exit_code" # https://stackoverflow.com/questions/60453924
+          exit $(( $exit_code==1 ))
       
       - name: Compute failure notification
         uses: rtCamp/action-slack-notify@v2
-        if: always() && steps.compute.outputs.exit_code > 0
+        if: always() && steps.compute.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
           SLACK_MESSAGE: <${{ env.AMAL_SID }}> Error computing TOD modifiers.
@@ -96,7 +84,7 @@ jobs:
 
       - name: Check failure notification
         uses: rtCamp/action-slack-notify@v2
-        if: always() && steps.check.outputs.exit_code > 0
+        if: always() && steps.check.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
           SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> TOD modifiers failed validation step.
@@ -107,7 +95,7 @@ jobs:
 
       - name: Apply failure notification
         uses: rtCamp/action-slack-notify@v2
-        if: always() && steps.apply.outputs.exit_code > 0
+        if: always() && steps.apply.outputs.exit_code != 0
         env:
           SLACK_CHANNEL: ${{ env.SLACK_CHANNEL }}
           SLACK_MESSAGE: <${{ env.AMAL_SID }}> <${{ env.CURTIS_SID }}> <${{ env.DAN_SID }}> Error applying TOD modifiers to bing.
