--- a/.github/workflows/bing_update_bids_tod.yml
+++ b/.github/workflows/bing_update_bids_tod.yml
@@ -2,7 +2,9 @@ name: bing-update-bids-tod
 
 on:
   push:
-    # branches: [ workspace_amal ]
+    # branches: 
+    #   - workspace_amal
+    #   - main
     paths:
       - models/bing/time_of_day/**
       - .github/workflows/bing_update_bids_tod.yml
